# hw5

./: README.md  hw5-writeup.md  hw5.py  pyproject.toml
